# nanometers

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  build.sh
apps/nano-ios/: .gitignore  Config.xcconfig  NanoMeters.entitlements  Secrets.example.xcconfig  project.yml  run-on-device.sh
apps/nano-ios/Sources/: Info.plist  NanoMetersApp.swift  RootView.swift
apps/nano-ios/Sources/Components/: AirPlayButton.swift  AnalysisArea.swift  AnalysisModule.swift  CloseUpWaveform.swift  FlipHero.swift  FolderPicker.swift  FolderRow.swift  GlassRoundButton.swift  GlassTabBar.swift  Goniometer.swift  LUFSBadge.swift  LibraryBreadcrumb.swift  MiniPlayer.swift  ModSwitch.swift  MorphArtwork.swift  NMArtwork.swift  NMLufsValue.swift  NMMiniWave.swift  NMRow.swift  NMStyle.swift  OverviewWaveform.swift  PlaylistCover.swift  SourceRow.swift  Spectrum.swift
apps/nano-ios/Sources/DSP/: ArtworkTintStore.swift  LiveScopeTap.swift  NanoDSPBridge.swift  StereoWaveBin.swift  WaveBin.swift  WaveBins.swift  WaveformAnalyzer.swift  WaveformCache.swift  WaveformStore.swift
apps/nano-ios/Sources/Import/: DemoSeed.swift  SourcesMigration.swift  TrackImporter.swift
apps/nano-ios/Sources/Model/: AppSchema.swift  FolderNode.swift  LibraryBrowse.swift  LibraryIndex.swift  LibraryNav.swift  LibraryStore.swift  Playlist.swift  RootFolder.swift  Source.swift  SourceKind.swift  SourceState.swift  Track.swift
apps/nano-ios/Sources/Playback/: AudioEngine.swift  PlayContext.swift  PlaybackMath.swift  PlaybackQueue.swift
apps/nano-ios/Sources/Player/: PlayerContainer.swift  PlayerProgress.swift
apps/nano-ios/Sources/Screens/: AddToPlaylistSheet.swift  LibraryScreen.swift  NewPlaylistSheet.swift  NowPlayingScreen.swift  PlaylistDetailScreen.swift  PlaylistsScreen.swift  QueueSheet.swift  SearchScreen.swift  SettingsSheet.swift  SourcesSettingsView.swift  TrackContextSheet.swift  TrackDetailScreen.swift  _Stubs.swift
apps/nano-ios/Sources/Sources/: AudioMime.swift  DirectoryEnumerator.swift  LocalSourceProvider.swift  MockSourceProvider.swift  RemoteFileCache.swift  SourceProvider.swift  SourcesManager.swift
apps/nano-ios/Sources/Sources/Drive/: DriveAPIClient.swift  (+1 more)
apps/nano-ios/Sources/Theme/: Theme.swift
apps/nano-ios/Tests/: ArtworkTintStoreTests.swift  AudioEngineTests.swift  CloseUpMathTests.swift  DemoSeedTests.swift  DirectoryEnumeratorTests.swift  DriveAPIClientTests.swift  FolderNodeTests.swift  GoogleDriveProviderTests.swift  GraphAPIClientTests.swift  ImportTests.swift  KeychainTokenStoreTests.swift  LibraryBrowseTests.swift  LibraryIndexTests.swift  LibraryNavTests.swift  LibrarySearchTests.swift  LibraryStoreTests.swift  Mocks.swift  ModuleSelectionTests.swift  NanoDSPLinkTests.swift  OAuthAccessTokenTests.swift  OAuthClientTests.swift  OAuthConfigTests.swift  OneDriveProviderTests.swift  PKCETests.swift  PlaybackMathTests.swift  PlaybackQueueTests.swift  RemoteFileCacheTests.swift  RemotePlaybackPrepTests.swift  ScopeScanTests.swift  SearchTests.swift  SmokeTests.swift  SourceKindTests.swift  SourceModelTests.swift  SourcesManagerTests.swift  SourcesMigrationTests.swift  TestDB.swift  ThemeTests.swift  TokenRefreshRotationTests.swift  TokenStoreTests.swift  WaveBinsTests.swift  (+2 more)
apps/nano-ios/UITests/: DriveMockFlowUITests.swift  LibraryBrowserUITests.swift  LiveMeterUITests.swift  NowPlayingUITests.swift  PlaybackUITests.swift  SearchAndGoToSourceUITests.swift  SourcesSettingsUITests.swift  WaveformUITests.swift
apps/nano-plugin/: Cargo.toml
apps/nano-plugin/auv2/: CMakeLists.txt
apps/nano-plugin/src/: NANOPLAYER_NOTES.md  editor.rs  input.rs  layout.rs  lib.rs  menu.rs  nanoplayer.rs  overlay.rs  standalone.rs
apps/nano-plugin/src/module/: loudness.rs  mod.rs  oscilloscope.rs  stereometer.rs
apps/nano-plugin/src/module/waveform/: mod.rs
apps/nano-tui/: Cargo.toml
apps/nano-tui/src/: main.rs
auv2/: CMakeLists.txt
crates/nano-dsp/: Cargo.toml  build-xcframework.sh
crates/nano-dsp/include/: module.modulemap  nano_dsp.h
crates/nano-dsp/smoke/: smoke.swift
crates/nano-dsp/src/: correlation.rs  ffi.rs  lib.rs  loudness.rs
crates/nano-dsp/src/waveform/: mod.rs
crates/nano-dsp/tests/: ffi_abi.rs  pure_core_standalone.rs
docs/: google-drive-setup.md  library-and-sources-IMPLEMENTATION.md  onedrive-setup.md
docs/adr/: 0001-spectral-coloring-3band-rgb.md  0002-module-host-data-flow.md  0003-layout-horizontal-strip.md  0004-input-routing-pointer-grab.md  0005-text-rendering-wgpu-text.md  0006-handroll-bs1770-ebur128-oracle.md  0007-waveform-scrolling-minmax-contour.md  0008-render-thread-swapchain-paced.md  0008-workspace-crate-split-cross-platform.md  0009-ios-renders-natively-in-swiftui.md  0009-workspace-crate-split-cross-platform.md  0010-ios-renders-natively-in-swiftui.md
docs/specs/: loudness-module.md  waveform-module.md
docs/superpowers/plans/: 2026-05-30-module-host-and-modules.md  2026-06-06-nanometers-ios-phase0-workspace-restructure.md  2026-06-07-nanometers-ios-phase1-shell.md  2026-06-07-nanometers-ios-phase2-playback.md  2026-06-07-nanometers-ios-phase3-waveform-lufs.md  2026-06-07-nanometers-ios-phase4-now-playing.md  2026-06-09-nanometers-ios-phase5-closeup-lufs.md  2026-06-13-phase-e-input.md  2026-06-13-phase-f1-config-persistence.md  2026-06-13-phase-f3-multi-instance.md  2026-06-14-library-sources-phase1-data-model.md  2026-06-14-library-sources-phase2-folder-browser.md  2026-06-14-library-sources-phase3-search-gotosource.md  2026-06-14-library-sources-phase4-settings-sources.md  2026-06-14-library-sources-phase5-oauth-drive.md  2026-06-14-onedrive-source.md  2026-06-14-stereometer-module.md
docs/superpowers/specs/: 2026-06-06-nanometers-ios-design.md  2026-06-13-now-playing-redesign-design.md  2026-06-14-library-and-sources-design.md  2026-06-14-onedrive-source-design.md
nanometers/: Cargo.toml
nanometers/src/: NANOPLAYER_NOTES.md  dev.rs  editor.rs  layout.rs  lib.rs  loudness.rs
nanometers/src/module/: loudness.rs  mod.rs
nanometers/src/module/waveform/: color.rs  mod.rs  store.rs
xtask/: Cargo.toml
(+10 files in other folders)
