[workspace]
resolver = "3"
members = ["nanometers", "xtask"]
default-members = ["nanometers"]

[workspace.package]
edition = "2024"
rust-version = "1.87"
authors = ["William Asp <wille.asp@live.se>"]
license = "MIT"
repository = "https://github.com/willeasp/nanometers"

[workspace.dependencies]
# `assert_process_allocs` is NOT enabled here: it aborts on an allocation nih-plug's own
# standalone wrapper makes on the first guarded `process` call, which would break the standalone
# dev binary (and the dev-player). It's re-enabled for shipping builds via the `rt-assert` feature
# (see nanometers/Cargo.toml), which build.sh passes to `cargo xtask bundle`.
nih_plug = { git = "https://github.com/BillyDM/nih-plug.git", rev = "25d5e0a0ee4b76d4c8ccd5da2cf4cb200d56e8ab", features = [
    "standalone",
] }
nih_plug_xtask = { git = "https://github.com/BillyDM/nih-plug.git", rev = "25d5e0a0ee4b76d4c8ccd5da2cf4cb200d56e8ab" }

baseview = { version = "0.1", features = ["opengl"] }
wgpu = "29"
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }

pollster = "0.4"
crossbeam = "0.8"
atomic_float = "1.1"
serde = { version = "1.0", features = ["derive"] }

log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }

# DSP / data plumbing
rtrb = "0.3.3"
triple_buffer = "9.0.0"
realfft = "3.0"
bytemuck = { version = "1.18", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1

# Vendored baseview fork: baseview's macOS backend paces on_frame with a hardcoded 66.7 Hz
# CFRunLoopTimer (src/macos/window.rs), which beats against a 120 Hz ProMotion display and makes the
# waveform scroll judder no matter how clean the column math is. The fork drives on_frame from an
# AppKit display link (vsync-locked, refresh-adaptive) instead. One baseview in the tree (this crate
# + nih_plug both take crates.io 0.1.0), so this single patch covers everything.
[patch.crates-io]
baseview = { path = "vendor/baseview" }
