[package]
name = "nanometers"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Chill open-source audio meter plugin with waveform, spectrum, and stereo visualizations."

[lib]
# `cdylib` for the plugin (CLAP/VST3), `lib` is needed for the standalone target.
crate-type = ["cdylib", "lib"]

[[bin]]
name = "nanometers"
path = "src/standalone.rs"

[features]
# Dev-only file player: decode a song and stream it through the waveform without a loopback
# device. Off by default so the shipped plugin never links symphonia/cpal.
dev-player = ["dep:symphonia", "dep:cpal"]

# Realtime-safety assertion: aborts if the audio thread allocates. Enabled only for shipping
# builds (build.sh passes it to `cargo xtask bundle`) — nih-plug's standalone wrapper itself
# trips it on the first process call, so it can't be on for `cargo run` of the standalone.
rt-assert = ["nih_plug/assert_process_allocs"]

[dependencies]
nih_plug.workspace = true

# Dev-player only. cpal pinned to nih-plug's version to avoid a duplicate native dependency.
# Formats match what CLAUDE.md documents the dev-player accepts (mp3/flac/wav/aac); `pcm` is the
# WAV sample codec, `isomp4` the AAC container. Dev-only, so binary size here doesn't matter.
symphonia = { version = "0.5", optional = true, default-features = false, features = [
    "mp3",
    "flac",
    "wav",
    "pcm",
    "aac",
    "isomp4",
] }
cpal = { version = "0.17", optional = true }

baseview.workspace = true
wgpu.workspace = true
raw-window-handle.workspace = true
raw-window-handle-06.workspace = true

pollster.workspace = true
crossbeam.workspace = true
atomic_float.workspace = true
serde.workspace = true
log.workspace = true

rtrb.workspace = true
triple_buffer.workspace = true
bytemuck.workspace = true

[dev-dependencies]
# Reference BS.1770 implementation, used only as a conformance oracle in tests (ADR 0006).
# Never linked into the shipped plugin.
ebur128 = "0.1.10"
# Test-only: exercise the EditorState persist round-trip (the same serde path nih-plug uses).
serde_json = "1.0"
