[package]
name = "nanometers"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Chill open-source audio meter plugin with waveform, spectrum, and stereo visualizations."

[lib]
# `cdylib` for the plugin (CLAP/VST3), `lib` is needed for the standalone target.
crate-type = ["cdylib", "lib"]

[[bin]]
name = "nanometers"
path = "src/standalone.rs"

# Throwaway terminal mp3-player + meter prototype (see src/nanoplayer.rs). Gated so a plain
# `cargo build` never pulls in the TUI/audio deps; run with `--features nanoplayer`.
[[bin]]
name = "nanoplayer"
path = "src/nanoplayer.rs"
required-features = ["nanoplayer"]

[features]
# Dev-only file player: decode a song and stream it through the waveform without a loopback
# device. Off by default so the shipped plugin never links symphonia/cpal.
dev-player = ["dep:symphonia", "dep:cpal"]

# Terminal player prototype: decode + play a file and render the waveform/LUFS in the terminal,
# reusing the plugin's LoudnessDsp + spectral coloring. Off by default — adds the TUI/audio deps.
nanoplayer = ["dep:symphonia", "dep:cpal", "dep:crossterm", "dep:image", "dep:libc"]

# Realtime-safety assertion: aborts if the audio thread allocates. Enabled only for shipping
# builds (build.sh passes it to `cargo xtask bundle`) — nih-plug's standalone wrapper itself
# trips it on the first process call, so it can't be on for `cargo run` of the standalone.
rt-assert = ["nih_plug/assert_process_allocs"]

[dependencies]
nih_plug.workspace = true

# Dev-player only. cpal pinned to nih-plug's version to avoid a duplicate native dependency.
# Formats match what CLAUDE.md documents the dev-player accepts (mp3/flac/wav/aac); `pcm` is the
# WAV sample codec, `isomp4` the AAC container. Dev-only, so binary size here doesn't matter.
symphonia = { version = "0.5", optional = true, default-features = false, features = [
    "mp3",
    "flac",
    "wav",
    "pcm",
    "aac",
    "isomp4",
] }
cpal = { version = "0.17", optional = true }

# nanoplayer prototype only: raw-mode terminal control + non-blocking key input for the TUI.
crossterm = { version = "0.28", optional = true }

# nanoplayer prototype only: decode embedded cover-art (JPEG/PNG) for half-block rendering.
# default-features off → pulls just png + zune-jpeg, no rayon/avif/webp/tiff machinery.
image = { version = "0.25.10", optional = true, default-features = false, features = [
    "jpeg",
    "png",
] }

# nanoplayer prototype only: poll(2) for a timed OSC 11 terminal-background query (theme detect).
libc = { version = "0.2", optional = true }

baseview.workspace = true
wgpu.workspace = true
raw-window-handle.workspace = true
raw-window-handle-06.workspace = true

pollster.workspace = true
crossbeam.workspace = true
atomic_float.workspace = true
serde.workspace = true
log.workspace = true

rtrb.workspace = true
triple_buffer.workspace = true
bytemuck.workspace = true

# Text rendering (ADR 0005): glyph atlas + sections, versioned in lockstep with wgpu (29.0.3).
# The first runtime dependency against the hand-roll ethos, localized to text. An OFL font
# (JetBrains Mono) is embedded via include_bytes! so the plugin stays self-contained.
wgpu_text = "29.0.3"

[dev-dependencies]
# Reference BS.1770 implementation, used only as a conformance oracle in tests (ADR 0006).
# Never linked into the shipped plugin.
ebur128 = "0.1.10"
# Test-only: exercise the EditorState persist round-trip (the same serde path nih-plug uses).
serde_json = "1.0"
