[package]
name = "nanometers"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Chill open-source audio meter plugin with waveform, spectrum, and stereo visualizations."

[lib]
# `cdylib` for the plugin (CLAP/VST3), `lib` is needed for the standalone target.
crate-type = ["cdylib", "lib"]

[[bin]]
name = "nanometers"
path = "src/standalone.rs"

[features]
# Dev-only file player: decode a song and stream it through the waveform without a loopback
# device. Off by default so the shipped plugin never links symphonia/cpal.
dev-player = ["dep:symphonia", "dep:cpal"]

# Realtime-safety assertion: aborts if the audio thread allocates. Enabled only for shipping
# builds (build.sh passes it to `cargo xtask bundle`) — nih-plug's standalone wrapper itself
# trips it on the first process call, so it can't be on for `cargo run` of the standalone.
rt-assert = ["nih_plug/assert_process_allocs"]

[dependencies]
nih_plug.workspace = true

# The platform-free DSP/domain core (ADR 0008). The plugin re-exports its items under their old
# paths so the rest of the crate is unchanged.
nano-dsp = { path = "../../crates/nano-dsp" }

# Dev-player only. cpal pinned to nih-plug's version to avoid a duplicate native dependency.
# Formats match what CLAUDE.md documents the dev-player accepts (mp3/flac/wav/aac); `pcm` is the
# WAV sample codec, `isomp4` the AAC container. Dev-only, so binary size here doesn't matter.
symphonia = { version = "0.5", optional = true, default-features = false, features = [
    "mp3",
    "flac",
    "wav",
    "pcm",
    "aac",
    "isomp4",
] }
cpal = { version = "0.17", optional = true }

baseview.workspace = true
wgpu.workspace = true
raw-window-handle.workspace = true
raw-window-handle-06.workspace = true

pollster.workspace = true
crossbeam.workspace = true
atomic_float.workspace = true
serde.workspace = true
# Module-owned opaque config (ADR 0003) is JSON-encoded into the column's bytes. Also the format
# nih-plug uses for the whole EditorState, so the persisted project carries one consistent encoding.
serde_json = "1.0"
log.workspace = true

rtrb.workspace = true
triple_buffer.workspace = true
bytemuck.workspace = true

# Text rendering (ADR 0005): glyph atlas + sections, versioned in lockstep with wgpu (29.0.3).
# The first runtime dependency against the hand-roll ethos, localized to text. An OFL font
# (JetBrains Mono) is embedded via include_bytes! so the plugin stays self-contained.
wgpu_text = "29.0.3"

[dev-dependencies]
# Reference BS.1770 implementation, used only as a conformance oracle in tests (ADR 0006).
# Never linked into the shipped plugin.
ebur128 = "0.1.10"
