[package]
name = "nano-tui"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal mp3-player + meter that reuses nanometers' DSP core (nano-dsp) over a second, non-GPU frontend. The renderer-independence proof for ADR 0008."

[[bin]]
name = "nano-tui"
path = "src/main.rs"

[dependencies]
# The shared DSP core: LoudnessDsp, Filterbank/band_color, StereoFrame (ADR 0008).
nano-dsp = { path = "../../crates/nano-dsp" }

# Audio→GUI ring (same primitive the plugin uses).
rtrb.workspace = true

# File decode (formats match what the dev-player documents). cpal pinned to nih-plug's version.
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "flac",
    "wav",
    "pcm",
    "aac",
    "isomp4",
] }
cpal = "0.17"

# Terminal control + non-blocking key input.
crossterm = "0.28"

# Embedded cover-art decode (JPEG/PNG) for half-block rendering.
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }

# poll(2) for the timed OSC 11 terminal-background query (theme detect).
libc = "0.2"
